fix: z-index of Stars in Resume

--- a/src/components/Resume/style.css
+++ b/src/components/Resume/style.css
@@ -15,6 +15,7 @@
 
 .resume__name-and-story {
   max-width: 562px;
+  z-index: 1;
 }
 
 .resume__name {
