--- a/src/components/ResumeStoryOnMe/style.css
+++ b/src/components/ResumeStoryOnMe/style.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   row-gap: 42px;
   margin-top: 96px;
+  z-index: 1;
 }
 
 .resume-story-on-me__title {
